[package]
name = "evm-diff"
version = "0.1.0"
edition = "2021"

default-run = "evm-diff"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
revm = { version = "26.0.1", default-features = false, features = ["serde"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
alloy-primitives = { version = "1.2.0", default-features = false, features = ["map-foldhash"] }
alloy-consensus = { version = "1.0.13", default-features = false }
alloy-eips = { version = "1.0.13", default-features = false }
reth-provider = { path = "../reth/crates/storage/provider" }
reth-db = { path = "../reth/crates/storage/db" }
reth-primitives = { path = "../reth/crates/primitives" }
reth_hl = { path = "../new" }
reth-cli-commands = { path = "../reth/crates/cli/commands" }
reth-node-types = { path = "../reth/crates/node/types" }
eyre = "0.6.12"
