[package]
name = "evm-diff"
version = "0.1.0"
edition = "2021"

default-run = "evm-diff"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4", features = ["derive"] }
revm = { version = "29.0.1", default-features = false, features = ["serde"] }
rmp = "0.8.14"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
alloy-primitives = { version = "=1.3.1", default-features = false, features = ["map-foldhash"] }
alloy-consensus = { version = "=1.0.37", default-features = false }
alloy-eips = { version = "=1.0.37", default-features = false }
alloy-tx-macros = "=1.0.37"
reth-provider = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
reth-db = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
reth-primitives = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
reth_hl = { path = "../nanoreth" }
reth-cli-commands = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
reth-node-types = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
eyre = "0.6"
tqdm = "0.8.0"
rocksdb = "=0.21.0"
vergen = "=9.0.6"
